[project]
name = "ethan-run"
version = "0.1.0"
description = "a simple game for my boy"
authors = [
    {name = "Daniel Huang",email = "huangdai@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pygame (>=2.5.2,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
  { include = "ethan_run" }
]
